--- a/WebStore1p/Views/Home/Index.cshtml
+++ b/WebStore1p/Views/Home/Index.cshtml
@@ -11,5 +11,8 @@
     </h2>
     <p>Hello world!!!</p>
     <a href="~/Home/SomeAction">Дополнительное представление</a>
+
+    <a href="~/Home/Employees">Сотрудники</a>
+
 </body>
 </html>
