--- a/WebStore1p/Views/Home/SomeAction.cshtml
+++ b/WebStore1p/Views/Home/SomeAction.cshtml
@@ -1,14 +1,5 @@
-﻿<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>SomeAction</title>
-</head>
-<body>
-<h3>SomeAction</h3>
+﻿<div class="container">
+    <h3>SomeAction</h3>
     <p>Другое представление</p>
     <a href="~/Home/Index">Основное представление</a>
-
-</body>
-</html>
+</div>
