--- a/WebStore1p/Views/Home/Employees.cshtml
+++ b/WebStore1p/Views/Home/Employees.cshtml
@@ -1,27 +1,30 @@
 ﻿@model IEnumerable<WebStore1p.Models.Employee>
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Employees</title>
-</head>
-<body>
-    <table>
-        @foreach(var employee in Model)
-        {
-        <tr>
-            <td>@employee.Id</td>
-            <td>@employee.SurName</td>
-            <td>@employee.FirstName</td>
-            <td>@employee.Patronymic</td>
-            <td>@employee.Age</td>
-            <td>
-                <a href="~/Home/Employee/@employee.Id">Карточка</a>
-            </td>
-        </tr>
-        }
-    </table>
-</body>
-</html>
+    <div class="container">
+        <table class="table table-bordered">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Фамилия</th>
+                    <th>Имя</th>
+                    <th>Отчество</th>
+                    <th>Возраст</th>
+                    <th></th>
+</thead>
+            <tbody>
+                @foreach (var employee in Model)
+                {
+                    <tr>
+                        <td>@employee.Id</td>
+                        <td>@employee.SurName</td>
+                        <td>@employee.FirstName</td>
+                        <td>@employee.Patronymic</td>
+                        <td>@employee.Age</td>
+                        <td>
+                            <a asp-controller="Home" asp-action="Employee" asp-route-id="@employee.Id">Карточка</a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
