--- a/WebStore1p/Views/Employees/Index.cshtml
+++ b/WebStore1p/Views/Employees/Index.cshtml
@@ -6,10 +6,10 @@
 }
 
 <h3>@ViewData["Title"]</h3>
-<hr/>
+<hr />
 
 <div class="container">
-    <table class="table table-bordered">
+    <table class="table table-bordered" id="employees-table">
         <thead>
             <tr>
                 <th>ID</th>
@@ -37,3 +37,15 @@
         </tbody>
     </table>
 </div>
+
+@section Styles{
+    <style>
+        #employees-table {
+            background: red
+        }
+    </style>
+}
+
+@section Scripts{
+    <!--<script>QWE</script>-->
+}
