--- a/WebStore1p/Views/Home/Blog.cshtml
+++ b/WebStore1p/Views/Home/Blog.cshtml
@@ -139,7 +139,7 @@
 
                         <div class="shipping text-center">
                             <!--shipping-->
-                            <img src="images/home/shipping.jpg" alt="" />
+                            <img src="~/images/home/shipping.jpg" alt="" />
                         </div><!--/shipping-->
                     </div>
                 </div>
@@ -163,7 +163,7 @@
                                 </span>
                             </div>
                             <a href="">
-                                <img src="images/blog/blog-one.jpg" alt="">
+                                <img src="~/images/blog/blog-one.jpg" alt="">
                             </a>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                             <a class="btn btn-primary" href="">Read More</a>
@@ -185,7 +185,7 @@
                                 </span>
                             </div>
                             <a href="">
-                                <img src="images/blog/blog-two.jpg" alt="">
+                                <img src="~/images/blog/blog-two.jpg" alt="">
                             </a>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                             <a class="btn btn-primary" href="">Read More</a>
@@ -207,7 +207,7 @@
                                 </span>
                             </div>
                             <a href="">
-                                <img src="images/blog/blog-three.jpg" alt="">
+                                <img src="~/images/blog/blog-three.jpg" alt="">
                             </a>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                             <a class="btn btn-primary" href="">Read More</a>
