--- a/WebStore1p/wwwroot/css/main.css
+++ b/WebStore1p/wwwroot/css/main.css
@@ -8,9 +8,8 @@
 
 body {
   font-family: 'Roboto', sans-serif;
-  background:;
   position: relative;
-  font-weight:400;
+  font-weight: 400;
 }
 
 ul li {
@@ -899,7 +898,7 @@ h2.title {
   transition: height 500ms ease 0s;
   width: 100%;
   display: block;
-  opacity:;
+  opacity: 0.5;
 }
 
 .single-products:hover .product-overlay {
@@ -2141,6 +2140,7 @@ h2.title {
 
 .rating-area {
   border: 1px solid #F7F7F0;
+  direction: inherit;
   overflow: hidden;
 }
 
