--- a/WebStore1p/Views/_ViewImports.cshtml
+++ b/WebStore1p/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
 ﻿@using WebStore1p.Models
 
-@addTagHelper *, Microsoft.AspNetCore.Mvc.Taghelpers
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, WebStore1p
