Пример использования промежуточного ПО

--- a/WebStore1p/Views/Employees/Index.cshtml
+++ b/WebStore1p/Views/Employees/Index.cshtml
@@ -40,11 +40,11 @@
     </div>
 
 @section Styles{
-    <style>
+    @*<style>
         #employees-table {
             background: red
         }
-    </style>
+    </style>*@
 }
 
 @section Scripts{
