--- a/WebStore1p/Views/Employees/Details.cshtml
+++ b/WebStore1p/Views/Employees/Details.cshtml
@@ -5,7 +5,7 @@
 
 <div class="container">
 
-    <h3>ViewData["Title"]</h3>
+    <h3>@ViewData["Title"]</h3>
     <hr />
 
     <p>@Model.SurName</p>
