--- a/WebStore1p/Views/Employees/Index.cshtml
+++ b/WebStore1p/Views/Employees/Index.cshtml
@@ -10,6 +10,9 @@
     <h3>@ViewData["Title"]</h3>
     <hr />
 
+    <a asp-action="Edit" class="btn btn-success">Создать через Edit</a>
+    <a asp-action="Create" class="btn btn-success">Создать через Create</a>
+
     <table class="table table-bordered" id="employees-table">
         <thead>
             <tr>
