--- a/WebStore1p/Views/Employees/Edit.cshtml
+++ b/WebStore1p/Views/Employees/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Employee
+﻿@model EmployeeViewModel
 
 @{
     ViewData["Title"] = "Редактирование сотрудника id:" + Model.Id;
@@ -26,28 +26,28 @@
 
                 @*bootstrap*@
                 <div class="form-group">
-                    <label asp-for="SurName" class="control-label"></label>
-                    <input asp-for="SurName" class="form-control" />
+                    <label asp-for="SecondName" class="control-label"></label>
+                    <input asp-for="SecondName" class="form-control" />
                     @*ПШ span нужен чтобы вывести валидационную информацию об ошибках, которые могут возникнуть при вводе для конкретного элемента*@
-                    <span asp-validation-for="SurName"></span>
+                    <span asp-validation-for="SecondName" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="FirstName" class="control-label"></label>
-                    <input asp-for="FirstName" class="form-control" />
+                    <label asp-for="Name" class="control-label"></label>
+                    <input asp-for="Name" class="form-control" />
                     @*ПШ span нужен чтобы вывести валидационную информацию об ошибках, которые могут возникнуть при вводе для конкретного элемента*@
-                    <span asp-validation-for="FirstName"></span>
+                    <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="Patronymic" class="control-label"></label>
                     <input asp-for="Patronymic" class="form-control" />
                     @*ПШ span нужен чтобы вывести валидационную информацию об ошибках, которые могут возникнуть при вводе для конкретного элемента*@
-                    <span asp-validation-for="Patronymic"></span>
+                    <span asp-validation-for="Patronymic" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="Age" class="control-label"></label>
                     <input asp-for="Age" class="form-control" />
                     @*ПШ span нужен чтобы вывести валидационную информацию об ошибках, которые могут возникнуть при вводе для конкретного элемента*@
-                    <span asp-validation-for="Age"></span>
+                    <span asp-validation-for="Age" class="text-danger"></span>
                 </div>
 
                 <div class="form-group">
