--- a/WebStore1p/Views/_ViewImports.cshtml
+++ b/WebStore1p/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using WebStore1p.Models
+@using WebStore1p.ViewModels
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, WebStore1p
