Валидация модели данных

--- a/WebStore1p/Views/Employees/Edit.cshtml
+++ b/WebStore1p/Views/Employees/Edit.cshtml
@@ -21,6 +21,7 @@
 
         <div class="row">
             <div class="col-md-4">
+                @*поле ошибок валидации*@
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <input asp-for="Id" type="hidden" />
 
