--- a/WebStore1p/Views/Shared/Components/Sections/Default.cshtml
+++ b/WebStore1p/Views/Shared/Components/Sections/Default.cshtml
@@ -11,13 +11,13 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h4 class="panel-title">
-                        <a data-toggle="collapse" data-parent="#accordian" href="#@parent_section.Name.ToLower()">
+                        <a data-toggle="collapse" data-parent="#accordian" href="#@parent_section.GetHashCode().ToLower()">
                             <span class="badge pull-right"><i class="fa fa-plus"></i></span>
                             @parent_section.Name
                         </a>
                     </h4>
                 </div>
-                <div id="@parent_section.Name.ToLower()" class="panel-collapse collapse">
+                <div id="@parent_section.GetHashCode().ToLower()" class="panel-collapse collapse">
                     <div class="panel-body">
                         <ul>
                             @foreach (var child_section in parent_section.ChildSections)
