--- a/WebStore1p/Views/Catalog/Shop.cshtml
+++ b/WebStore1p/Views/Catalog/Shop.cshtml
@@ -1,4 +1,6 @@
-﻿    <section id="advertisement">
+﻿@model CatalogViewModel
+
+    <section id="advertisement">
         <div class="container">
             <img src="~/images/shop/advertisement.jpg" alt="" />
         </div>
@@ -8,11 +10,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-3">
-                    <partial name="Partial/_LeftSideBar" />
+                    <partial name="Partial/_LeftSideBar"/>
                 </div>
 
                 <div class="col-sm-9 padding-right">
-                    <partial name="Parttial/_FeatureItems" />
+                    <partial name="Partial/_FeaturesItems" model="@Model.Products"/>
                 </div>
             </div>
         </div>
