--- a/WebStore1p/Views/Home/Index.cshtml
+++ b/WebStore1p/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
 
             <div class="col-sm-9 padding-right">
 
-                <partial name="Partial/_FeaturesItems"/>
+                @*<partial name="Partial/_FeaturesItems"/>*@
 
                 <partial name="Partial/_CategoryTab"/>
 
