--- a/WebStore1p/Views/Shared/Components/Brands/Default.cshtml
+++ b/WebStore1p/Views/Shared/Components/Brands/Default.cshtml
@@ -6,9 +6,8 @@
         <div class="brands-name">
             <ul class="nav nav-pills nav-stacked">
                 @foreach(var brand in Model) {
-                <li><a href="#"> 
-                    <span class="pull-right">(50)</span>
-                    @brand.Name</a>
+                <li><a asp-controller="Catalog" asp-action="Shop" asp-route-BrandId="@brand.Id"> 
+                    <span class="pull-right">(50)</span>@brand.Name</a>
                 </li>
                 }
             </ul>
