--- a/WebStore1p/Views/Home/Index.cshtml
+++ b/WebStore1p/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@using WebStore1p.Infrastructure.Interfaces
+
 <partial name="Partial/_Slider" />
 
 <section>
@@ -11,7 +12,20 @@
 
             <div class="col-sm-9 padding-right">
 
-                @*<partial name="Partial/_FeaturesItems"/>*@
+                @inject IProductData catalog;
+                @{
+                    var products = catalog.GetProducts().Select(p => new ProductViewModel
+                    {
+                        Id = p.Id,
+                        Name = p.Name,
+                        Order = p.Order,
+                        ImageUrl = p.ImageUrl,
+                        Price = p.Price
+                    });
+
+                }
+
+                <partial name="Partial/_FeaturesItems" model="@products"/>
 
                 <partial name="Partial/_CategoryTab"/>
 
