--- a/WebStore1p/Views/Home/Index.cshtml
+++ b/WebStore1p/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@using WebStore1p.Infrastructure.Interfaces
+@using WebStore1p.Infrastructure.Mapping
 
 <partial name="Partial/_Slider" />
 
@@ -13,23 +14,12 @@
             <div class="col-sm-9 padding-right">
 
                 @inject IProductData catalog;
-                @{
-                    var products = catalog.GetProducts().Select(p => new ProductViewModel
-                    {
-                        Id = p.Id,
-                        Name = p.Name,
-                        Order = p.Order,
-                        ImageUrl = p.ImageUrl,
-                        Price = p.Price
-                    });
 
-                }
+                <partial name="Partial/_FeaturesItems" model="@catalog.GetProducts().ToView()" />
 
-                <partial name="Partial/_FeaturesItems" model="@products"/>
+                <partial name="Partial/_CategoryTab" />
 
-                <partial name="Partial/_CategoryTab"/>
-
-                <partial name="Partial/_RecomendedItems"/>
+                <partial name="Partial/_RecomendedItems" />
             </div>
         </div>
     </div>
