--- a/WebStore1p/Views/Account/Register.cshtml
+++ b/WebStore1p/Views/Account/Register.cshtml
@@ -10,12 +10,20 @@
             <div class="col-sm-4">
                 <div class="signup-form">
                     <!--sign up form-->
-                    <h2>New User Signup!</h2>
-                    <form action="#">
-                        <input type="text" placeholder="Name" />
-                        <input type="email" placeholder="Email Address" />
-                        <input type="password" placeholder="Password" />
-                        <button type="submit" class="btn btn-default">Signup</button>
+                    <h2>Зарегистрироваться</h2>
+                    <form asp-controller="Account" asp-action="Register" method="post">
+                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+                        <input asp-for="UserName" placeholder="Имя пользователя" />
+                        <span asp-validation-for="UserName" class="text-danger"></span>
+                        
+                        <input asp-for="Password" placeholder="Пароль" />
+                        <span asp-validation-for="Password" class="text-danger"></span>
+                        
+                        <input asp-for="ConfirmPassword" placeholder="Повторить пароль" />
+                        <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+                        
+                        <button type="submit" class="btn btn-default">Зарегистрироваться</button>
                     </form>
                 </div><!--/sign up form-->
             </div>
