--- a/WebStore1p/Views/Shared/Partial/_Header.cshtml
+++ b/WebStore1p/Views/Shared/Partial/_Header.cshtml
@@ -62,11 +62,11 @@
                 <div class="col-sm-8">
                     <div class="shop-menu pull-right">
                         <ul class="nav navbar-nav">
-                            <li><a href="#"><i class="fa fa-user"></i> Account</a></li>
+                            <li><a asp-controller="Account" asp-action="Register"><i class="fa fa-user"></i> Регистрация</a></li>
                             <li><a href="#"><i class="fa fa-star"></i> Wishlist</a></li>
                             <li><a asp-controller="Home" asp-action="CheckOut"><i class="fa fa-crosshairs"></i> Заказ</a></li>
                             <li><a asp-controller="Home" asp-action="Cart"><i class="fa fa-shopping-cart"></i> Корзина</a></li>
-                            <li><a asp-controller="Home" asp-action="Login"><i class="fa fa-lock"></i> Вход</a></li>
+                            <li><a asp-controller="Account" asp-action="Login"><i class="fa fa-lock"></i> Вход</a></li>
                         </ul>
                     </div>
                 </div>
