--- a/WebStore1p/Views/Shared/Partial/_Styles.cshtml
+++ b/WebStore1p/Views/Shared/Partial/_Styles.cshtml
@@ -2,7 +2,16 @@
 <link href="~/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 <link href="~/lib/prettyPhoto/css/prettyPhoto.css" rel="stylesheet">
 
-<link href="~/css/price-range.css" rel="stylesheet">
-<link href="~/css/animate.css" rel="stylesheet">
-<link href="~/css/main.css" rel="stylesheet">
-<link href="~/css/responsive.css" rel="stylesheet">
+<environment include="Development">
+    @*<link href="~/css/price-range.css" rel="stylesheet" asp-append-version="true">
+        <link href="~/css/animate.css" rel="stylesheet" asp-append-version="true">
+        <link href="~/css/main.css" rel="stylesheet" asp-append-version="true">
+        <link href="~/css/responsive.css" rel="stylesheet" asp-append-version="true">*@
+
+    <link href="~/css/site.css" rel="stylesheet" asp-append-version="true" />
+</environment>
+
+<environment exclude="Development">
+    <ling href="~/css/site.min.css rel="stylesheet" asp-append-version="true"/>
+</environment>
+
