--- a/WebStore1p/Views/_ViewImports.cshtml
+++ b/WebStore1p/Views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 ﻿@using WebStore1p.Models
 @using WebStore1p.ViewModels
 @using WebStore1p.ViewModels.Identity
+@using WebStore1p.ViewModels.Orders;
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, WebStore1p
